[package]
name = "sss"
version = "0.1.0"
authors = ["corocn <crsk.plmzh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "^1.0.101", features = ["derive"] }
handlebars = "3.5.4"
serde_json = "1.0.64"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "serve"]
